[project]
name = "dl-assignment1"
version = "1.0.0"
description = "Deep Learning Assignment 1 — Classification Model Comparison"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0",
    "torchvision>=0.15",
    "timm>=0.9",
    "transformers>=4.30",
    "datasets>=2.14",
    "open-clip-torch>=2.20",
    "gradio>=4.0",
    "scikit-learn>=1.3",
    "pyyaml>=6.0",
    "tensorboard>=2.14",
    "matplotlib>=3.7",
    "seaborn>=0.12",
    "numpy>=1.24",
    "tqdm>=4.65",
    "streamlit>=1.28",
    "gdown>=4.7",
    "scipy>=1.10",
]

[project.optional-dependencies]
dev = ["pytest", "ruff", "black"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.black]
line-length = 100

[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = "^3.10" # (Make sure this matches the Python version you selected on Streamlit Cloud!)
torch = {version = "*", source = "pytorch_cpu"}
torchvision = {version = "*", source = "pytorch_cpu"}

[[tool.poetry.source]]
name = "pytorch_cpu"
url = "https://download.pytorch.org/whl/cpu"
priority = "explicit"
